--- a/index.html
+++ b/index.html
@@ -67,60 +67,60 @@
       <h2 class="creations-title">Our creations</h2>
       <div class="creations-container">
         <picture class="creations-picture">
+          <h3 class="picture-text">Deep earth</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-deep-earth.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-deep-earth.jpg">
           <img src="./images/mobile/image-deep-earth.jpg" alt="planet earth">
-          <h3>Deep earth</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">Night Arcade</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-night-arcade.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-night-arcade.jpg">
           <img src="./images/mobile/image-night-arcade.jpg" alt="arcade">
-          <h3>Night Arcade</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">Soccer Team VR</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-soccer-team.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-soccer-team.jpg">
           <img src="./images/mobile/image-soccer-team.jpg" alt="soccer player">
-          <h3>Soccer Team VR</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">The<br>Grid</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-grid.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-grid.jpg">
           <img src="./images/mobile/image-grid.jpg" alt="racing car">
-          <h3>The Grid</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">From Up Above VR</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-from-above.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-from-above.jpg">
           <img src="./images/mobile/image-from-above.jpg" alt="curvy road from above">
-          <h3>From Up Above VR</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">Pocket Borealis</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-pocket-borealis.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-pocket-borealis.jpg">
           <img src="./images/mobile/image-pocket-borealis.jpg" alt="aurora borealis">
-          <h3>Pocket Borealis</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">The Curiosity</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-curiosity.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-curiosity.jpg">
           <img src="./images/mobile/image-curiosity.jpg" alt="Mars curiosity">
-          <h3>The Curiosity</h3>
         </picture>
         <picture class="creations-picture">
+          <h3 class="picture-text">Make It Fisheye</h3>
           <source media="(max-width: 699px)" srcset="./images/mobile/image-fisheye.jpg">
           <source media="(min-width: 700px)" srcset="./images/desktop/image-fisheye.jpg">
           <img src="./images/mobile/image-fisheye.jpg" alt="fisheye view">
-          <h3>Make It Fisheye</h3>
         </picture>
-        <button class="creations-button">See all</button>
       </div>
+      <button class="creations-button">See all</button>
     </div>
   </section>
 
   <!------------------------- Footer ---------------------->
-  <footer class="footer-section">
+  <footer class="footer">
     <div class="container">
       <img class="footer-logo" src="./images/logo.svg" alt="">
       <ul class="footer-menu">
