README file updated.

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
         <li class="footer-item"><a class="footer-link" href="#">Support</a></li>
       </ul>
       <div class="social-bar">
-        <img src="./images/icon-facebook.svg" alt="facebook" class="social-icon">
-        <img src="./images/icon-twitter.svg" alt="twitter" class="social-icon">
-        <img src="./images/icon-pinterest.svg" alt="pinterest" class="social-icon">
-        <img src="./images/icon-instagram.svg" alt="instagram" class="social-icon">
+        <a class="social-link" href=""><img src="./images/icon-facebook.svg" alt="facebook" class="social-icon"></a>
+        <a class="social-link" href=""><img src="./images/icon-twitter.svg" alt="twitter" class="social-icon"></a>
+        <a class="social-link" href=""><img src="./images/icon-pinterest.svg" alt="pinterest" class="social-icon"></a>
+        <a class="social-link" href=""><img src="./images/icon-instagram.svg" alt="instagram" class="social-icon"></a>
       </div>
       <p class="rights-text">© 2021 Loopstudios. All rights reserved.</p>
         </footer>
